[package]
name = "hello_world_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.11"
env_logger = "0.10.0"
fuser = "0.12.0"
libc = "0.2.140"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = "1.26.0"
serde = { version = "1.0.157", features = ["derive"] }